--- a/src/popup/index.css
+++ b/src/popup/index.css
@@ -11,3 +11,10 @@ html, body {
         background: #1f1f1f;
     }
 }
+.markdown-body {
+    font-size: 14px !important;
+    max-width: 560px !important;
+}
+.markdown-body table {
+    font-size: 11px !important;
+}
